bingo-java-qat/java-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bingo-java
  namespace: bingo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bingo-java
  template:
    metadata:
      labels:
        app: bingo-java

      annotations:
        instrumentation.opentelemetry.io/inject-nodejs: 'false'
        instrumentation.opentelemetry.io/inject-java: "opentelemetry-operator-system/java-instrumentation"
        sidecar.opentelemetry.io/inject: 'true'

    spec:
      containers:
      - name: bingo-java
        image: 887270620532.dkr.ecr.ap-southeast-1.amazonaws.com/bingo-uat-java:latest
        ports:
        - containerPort: 9090
        volumeMounts:
        resources:
          limits:
            memory: "4Gi"
            cpu: "1"
          requests:
            memory: "4Gi"
            cpu: "1"
